fix(docs): Fix overflows on small screens

--- a/projects/ngqp-demo/src/app/shared/demo-browser/demo-browser.component.scss
+++ b/projects/ngqp-demo/src/app/shared/demo-browser/demo-browser.component.scss
@@ -103,6 +103,8 @@ $panel-content-height: 27px;
 
         display: flex;
         justify-content: space-between;
+
+        overflow: hidden;
     }
 }
 
